Finish index.html

--- a/Lab7/index.html
+++ b/Lab7/index.html
@@ -18,7 +18,12 @@
     <main>
         <article>
             <h2>About Me</h2>
-            <p>Hi, my name is Rishabh Dhadda ....</p>
+            <p>Hi, my name is Rishabh Dhadda and I am a 5/5 Software Engineering student here at Stevens with a minor in Computer Science. Throughout my course work, projects, and 
+              internships, I have gained a lot of experience in the field of Software Engineering. Specifically, I have developed my skills in Full Stack, AI, and Automation Engineering. On my free time 
+              I like to expand on my skillset by taking on new projects as well as practice Leetcode because I want to get a job. A fun fact about me is that I have been dancing since the age of 5 and last year
+              I competed on a national level in the DDN circuit. The DDN circuit contains bollywood fusion dance teams across the nation from different colleges. I traveled to Austin, Texas and Iowa City, Iowa for the 
+              competititions and it was an amazing time. That is my life.
+            </p>
         </article>
         <article>
             <h2>Favorite TV Shows</h2>
