Finish story.html

--- a/Lab7/education.html
+++ b/Lab7/education.html
@@ -19,8 +19,7 @@
         <section>
             <h2>Stevens Institute of Technology</h2>
             <p>My favorite class here at Stevens is Web Programming.</p>
-            <aside>A memorable memory at Stevens was when I was the Vice President of the Indian Undergraduate Association (IUA) and we performed at Unity. We ended up winning the people's choice award
-                for best performance which was a very good time.
+            <aside>A memorable memory at Stevens was when I was the Vice President of the Indian Undergraduate Association (IUA) and we performed at Unity. We ended up winning the people's choice award for best performance which was a very good time.
             </aside>
         </section>
         <section>
