Finish validating functions and sorting

--- a/Lab9/static/homepage.html
+++ b/Lab9/static/homepage.html
@@ -41,13 +41,13 @@ An example that would be displayed in LI of the list (YOU MUST DISPLAY IT WITH T
             <h1>Rishabh's Array Sort Application</h1>
          </header>
          <main>
-            <p id="error">
+            <p id="error" hidden>
 
             </p>
             <form method="post" name="arraySortForm" id="arraySortForm">
-                <label for="array_input">Enter an array (separated by commas): </label>
+                <label for="array_input">Enter one or more arrays separated by commas ([5, 1, 3], [4, 2, 5]): </label>
                 <input name="array_input" id="array_input" type="text">
-                <button type="submit" name="submitButton" id="submitButton"></button>
+                <button type="submit" name="submitButton" id="submitButton">Sort Arrays</button>
             </form>
             <ol id="input_sorted"></ol>
          </main>
